# tamrfsits

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.org  pyproject.toml
data/aois/test/: 22NBL_12.json  22NBL_24.json  22NCK_12.json  30NUM_12.json  30NUM_24.json  30NVL_12.json  30NVM_12.json  30NVM_24.json  30SWG_12.json  30SWG_24.json  30SWH_12.json  30SWH_24.json  31TCJ_12.json  31TCJ_24.json  31TFJ_12.json  31TFJ_24.json  31UES_12.json  31UES_24.json  31UFS_12.json  31UFS_24.json  32TPT_12.json  32TPT_24.json  32UMU_12.json  32UMU_24.json  32UMV_12.json  32UMV_24.json  32UMV_27.json  32UPU_12.json  32UPU_24.json  33VVJ_12.json  33VVJ_24.json  33VVJ_42.json  33VWJ_12.json  33VWJ_24.json  34TFQ_12.json  34TFQ_24.json  34TFR_12.json  34TFR_24.json  34TFR_35.json  34TFS_12.json  (+1 more)
data/aois/train/: 22NBK_12.json  22NBK_24.json  22NCL_12.json  22NCL_24.json  30SUF_12.json  30SUF_21.json  30SUF_24.json  30SUG_12.json  30SUG_24.json  30SUH_12.json  30SUH_17.json  30SUH_24.json  30SVF_12.json  30SVF_21.json  30SVG_12.json  30SVG_24.json  30SVG_25.json  30SVH_12.json  30SVH_24.json  30SWF_12.json  31TCK_12.json  31TCK_24.json  31TDJ_12.json  31TDJ_24.json  31TDK_12.json  31TDK_24.json  31TEJ_12.json  31TEJ_24.json  31TEJ_60.json  31TEK_12.json  31TEK_24.json  31TEK_35.json  31TFK_12.json  31TFK_24.json  31UER_12.json  31UER_24.json  31UER_57.json  31UFR_12.json  31UFR_17.json  31UFR_24.json  (+24 more)
hydra/: train.yaml
hydra/callbacks/: default.yaml
hydra/datamodule/: ls2s2_2022.yaml  ls2s2_all.yaml  ls2s2_wwmy.yaml
hydra/decoder/: esrdec.yaml  mlp.yaml
hydra/experiments/: ablation_contrastive.yaml  ablation_lpips.yaml  ablation_mae.yaml  ablation_sensor_token.yaml  train_ls2s2_all.yaml  train_ls2s2_myww.yaml
hydra/hr_encoder/: carn.yaml  esrenc.yaml  esrgan.yaml  linear.yaml  mlp.yaml  unet.yaml
hydra/location/: jz.yaml  trex.yaml
hydra/log_dir/: default.yaml
hydra/loggers/: default.yaml
hydra/lr_encoder/: carn.yaml  esrenc.yaml  esrgan.yaml  linear.yaml  mlp.yaml  unet.yaml
hydra/positional_encoding/: fixed.yaml
hydra/trainer/: default.yaml  test.yaml
hydra/training_module/: spatiotemporal_fusion.yaml  temporal_interpolation.yaml
slurm/: sampling_trex.slurm  test_jz_a100.slurm  test_trex_a100.slurm  train_jz_a100.slurm  train_jz_h100.slurm  train_trex_a100.slurm  train_trex_h100.slurm
src/tamrfsits/: __init__.py
src/tamrfsits/baselines/: dms.py  dstfn.py  naive.py  network_dstfn_v1.py  sen2like.py  stair.py  utilise.py  utils.py
src/tamrfsits/components/: datewise.py  missing_data_imputer.py  positional_encoder.py  transformer.py
src/tamrfsits/core/: carn.py  cca.py  decorrelation.py  downsampling.py  esrgan.py  linear_gapfilling.py  lpips.py  mlp.py  time_series.py  unet.py  utils.py
src/tamrfsits/data/: joint_sits_datamodule.py  joint_sits_dataset.py
tests/: conftest.py  test_baselines.py  test_cca_loss.py  test_datewise.py  test_decorrelation.py  test_deep_harmo.py  test_downsampling.py  test_fda.py  test_hydra.py  test_joint_sits_datamodule.py  test_joint_sits_dataset.py  test_linear_gapffiling.py  test_lpips.py  test_metrics.py  test_missing_data_imputer.py  test_positional_encoder.py  test_strategy.py  test_time_series.py  test_training.py  test_transformer.py  test_utils.py  test_validation_workflow.py  tests_utils.py
(+8 files in other folders)
